oc-kustomize/base/1.7-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: todo-app-route
  namespace: anis-shkembi-dev
spec:
  path: /
  to:
    kind: Service
    name: todo-app-service
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
